# unnamed_1

./: .clang-format  CMakeLists.txt
include/: config.h  registry.h
include/domain/: config.h  registry.h
include/domain/config/: kwargs.h
include/domain/config/parser/: config_parser.h
include/parser/: config_parser.h
src/: main.cpp
src/domain/config/parser/: config_parser.cpp
src/parser/: config_parser.cpp
test/: CMakeLists.txt  test_config.cpp  test_main.cpp  test_registry.cpp
test/domain/: test_config.cpp  test_registry.cpp
